--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
   </script>
   <noscript><img src="//bat.bing.com/action/0?ti=151015499&Ver=2" height="0" width="0" style="display:none; visibility:hidden;" /></noscript>
   <!-- End Microsoft Ads UET Tag -->
+  <script type="text/javascript">
+    (function(c,l,a,r,i,t,y){
+        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+    })(window, document, "clarity", "script", "t2wl8vdgli");
+</script>
 </head>
 <body>
   <nav>
