--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><circle cx='50' cy='50' r='50' fill='%234f8cff'/><text x='50' y='60' font-size='50' text-anchor='middle' fill='white'>Q</text></svg>">
 
   <!-- Microsoft Ads UET Tag -->
+  <script>function uet_report_conversion() {window.uetq = window.uetq || [];window.uetq.push('event', 'SignupClick', {});}</script>
   <script>
   (function(w,d,t,r,u){
     var f,n,i; w[u]=w[u]||[];
